--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,24 @@
 asgiref==3.3.4
+beautifulsoup4==4.9.3
+certifi==2020.12.5
+chardet==4.0.0
 confusable-homoglyphs==3.2.0
-Django==1.11.29
+Django==3.2.3
+django-bootstrap-v5==1.0.4
 django-bootstrap3==11.0.0
 django-bootstrap4==0.0.7
+django-cors-headers==3.7.0
 django-registration==2.4.1
+django-utils-six==2.0
+idna==2.10
+importlib-metadata==3.10.1
 psycopg2-binary==2.8.6
+python-dateutil==2.8.1
 pytz==2021.1
+pyuploadcare==2.7.0
+requests==2.25.1
+six==1.16.0
+soupsieve==2.2.1
 sqlparse==0.4.1
+urllib3==1.26.5
+zipp==3.4.1
